5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1674_1100.log
== TEST (2019-04-25 11:18:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = float(input("Valor de uma cedula: "))
print("Entrada:" , valor,)
if( valor == 2 ):
	print("Animal: Tartaruga")
elif( valor == 5 ):
	print("Animal: Garça")
elif( valor == 10):
	print("Animal: Arara")
elif( valor == 20):
	print("Animal: Mico-leao-dourado"):
elif( valor == 50):
	print(" Animal: Onca-pintada"):
elif( valor == 100):
	print(" Animal: Garoupa"): 
-- ERROR:
File "XXXX", line 14
    print("Animal: Mico-leao-dourado"):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = float(input("Valor de uma cedula: "))
print("Entrada:" , valor,)
if( valor == 2 ):
	print("Animal: Tartaruga")
elif( valor == 5 ):
	print("Animal: Garça")
elif( valor == 10):
	print("Animal: Arara")
elif( valor == 20):
	print("Animal: Mico-leao-dourado")
elif( valor == 50):
	print(" Animal: Onca-pintada")
elif( valor == 100):
	print(" Animal: Garoupa")
-- OUTPUT:
Entrada: 100.0
 Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:20:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = float(input("Valor de uma cedula: "))
print("Entrada:" , valor,)
if( valor == 2 ):
	print("Animal: Tartaruga")
elif( valor == 5 ):
	print("Animal: Garça")
elif( valor == 10):
	print("Animal: Arara")
elif( valor == 20):
	print("Animal: Mico-leao-dourado")
elif( valor == 50):
	print(" Animal: Onca-pintada")
elif( valor == 100):
	print(" Animal: Garoupa")
-- EXECUTION TIME:
0.153598
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100.0
 Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7.0
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50.0
 Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor de uma cedula: "))
print("Entrada:" , valor,)
if( valor == 2 ):
	print("Animal: Tartaruga")
elif( valor == 5 ):
	print("Animal: Garça")
elif( valor == 10):
	print("Animal: Arara")
elif( valor == 20):
	print("Animal: Mico-leao-dourado")
elif( valor == 50):
	print(" Animal: Onca-pintada")
elif( valor == 100):
	print(" Animal: Garoupa")
-- OUTPUT:
Entrada: 100
 Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:20:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor de uma cedula: "))
print("Entrada:" , valor,)
if( valor == 2 ):
	print("Animal: Tartaruga")
elif( valor == 5 ):
	print("Animal: Garça")
elif( valor == 10):
	print("Animal: Arara")
elif( valor == 20):
	print("Animal: Mico-leao-dourado")
elif( valor == 50):
	print(" Animal: Onca-pintada")
elif( valor == 100):
	print(" Animal: Garoupa")
-- EXECUTION TIME:
0.193452
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
 Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
 Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:22:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor de uma cedula: "))
print("Entrada:" , valor,)
if( valor == 2 ):
	print("Animal: Tartaruga")
elif( valor == 5 ):
	print("Animal: Garça")
elif( valor == 10):
	print("Animal: Arara")
elif( valor == 20):
	print("Animal: Mico-leao-dourado")
elif( valor == 50):
	print(" Animal: Onca-pintada")
elif( valor == 100):
	print(" Animal: Garoupa")
else:
	print("invalido")
-- OUTPUT:
Entrada: 100
 Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:22:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor de uma cedula: "))
print("Entrada:" , valor,)
if( valor == 2 ):
	print("Animal: Tartaruga")
elif( valor == 5 ):
	print("Animal: Garça")
elif( valor == 10):
	print("Animal: Arara")
elif( valor == 20):
	print("Animal: Mico-leao-dourado")
elif( valor == 50):
	print(" Animal: Onca-pintada")
elif( valor == 100):
	print(" Animal: Garoupa")
else:
	print("invalido")
-- EXECUTION TIME:
0.154214
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
 Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
 Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:23:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor de uma cedula: "))
print("Entrada:" , valor,)
if( valor == 2 ):
	print("Animal: Tartaruga")
elif( valor == 5 ):
	print("Animal: Garça")
elif( valor == 10):
	print("Animal: Arara")
elif( valor == 20):
	print("Animal: Mico-leao-dourado")
elif( valor == 50):
	print(" Animal: Onca-pintada")
elif( valor == 100):
	print(" Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
 Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:23:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor de uma cedula: "))
print("Entrada:" , valor,)
if( valor == 2 ):
	print("Animal: Tartaruga")
elif( valor == 5 ):
	print("Animal: Garça")
elif( valor == 10):
	print("Animal: Arara")
elif( valor == 20):
	print("Animal: Mico-leao-dourado")
elif( valor == 50):
	print(" Animal: Onca-pintada")
elif( valor == 100):
	print(" Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.197056
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
 Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
 Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
